default/objects/BizMachine_Data_Settings__c/BizMachine_Data_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Used to specify fields used in communication between Salesforce and BizMachine.</description>
    <label>BizMachine Data Settings</label>
</CustomObject>