default/objects/BizMachine_Data_Settings__c/fields/BizMachine_Consumption_Category_Tag__c.field-meta.xml
<CustomField>
    <fullName>BizMachine_Consumption_Category_Tag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BizMachine Consumption Category Tag</label>
    <type>Checkbox</type>
</CustomField>