default/objects/BizMachine_Data_Settings__c/fields/BizMachine_Mapping_Field__c.field-meta.xml
<CustomField>
    <fullName>BizMachine_Mapping_Field__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BizMachine Mapping Field</label>
    <type>Checkbox</type>
</CustomField>