default/objects/BizMachine_Data_Settings__c/fields/BizMachine_Monitoring_Tag__c.field-meta.xml
<CustomField>
    <fullName>BizMachine_Monitoring_Tag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BizMachine Monitoring Tag</label>
    <type>Checkbox</type>
</CustomField>