default/objects/BizMachine_Data_Settings__c/fields/BizMachine_Tag_UID__c.field-meta.xml
<CustomField>
    <fullName>BizMachine_Tag_UID__c</fullName>
    <label>BizMachine Tag UID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>