default/objects/BizMachine_Data_Settings__c/fields/BizMachine_Updated_Tag__c.field-meta.xml
<CustomField>
    <fullName>BizMachine_Updated_Tag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BizMachine Updated Tag</label>
    <type>Checkbox</type>
</CustomField>