default/objects/BizMachine_Data_Settings__c/fields/Salesforce_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_API_Name__c</fullName>
    <label>Salesforce API Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>